--- a/css/style-white.css
+++ b/css/style-white.css
@@ -23,16 +23,6 @@ a {
     align-items: center;
 }
 
-#canvas {
-    background-color: #2c343f;
-    width: 110%;
-    height: 110%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -5;
-}
-
 .now {
     text-align: center;
     margin-top: 2em;
@@ -55,7 +45,7 @@ h1 {
     text-align: center;
     margin-top: 2em;
     font-size: 1em;
-    color: #525252;
+    color: #707070;
 }
 
 .header {
@@ -95,7 +85,7 @@ h1 sup {
     border-radius: 5px;
     cursor: pointer;
     border: 1px solid rgba(72, 94, 144, 0.16);
-    color: #7987A1;
+    color: #707070;
     background-color: white;
 }
 
@@ -108,7 +98,7 @@ h1 sup {
 
 .numbers {
     font-family: "Montserrat", sans-serif;
-    color: #7987A1;
+    color: #707070;
     font-size: 4em;
 }
 
@@ -269,14 +259,14 @@ footer a {
 
 .menu-item,
 .menu-open-button {
-    background: #DEEBFF;
+    background: #707070;
     border-radius: 100%;
     width: 80px;
     height: 80px;
     margin-left: -40px;
     position: absolute;
     top: 20px;
-    color: white;
+    color: #fff;
     text-align: center;
     line-height: 80px;
     transform: translate3d(0, 0, 0);
@@ -293,7 +283,7 @@ footer a {
 .hamburger {
     width: 25px;
     height: 3px;
-    background: white;
+    background: #fff;
     display: block;
     position: absolute;
     top: 50%;
@@ -341,8 +331,8 @@ footer a {
 }
 
 .menu-item:hover {
-    background: white;
-    color: #DEEBFF;
+    background: #707070;
+    color: #fff;
 }
 
 .menu-item:nth-child(3) {
