--- a/css/style-blue.css
+++ b/css/style-blue.css
@@ -25,7 +25,7 @@ a {
 }
 
 .now {
-    text-align: center;
+    text-align: left;
     margin-top: 2em;
     font-size: 2em;
 }
@@ -37,9 +37,10 @@ a {
 .container {
     position: relative;
     margin: auto;
+    margin-top: 12vh;
     overflow: hidden;
     width: 650px;
-    height: 480px;
+    height: 100vh;
 }
 
 h1 {
@@ -62,6 +63,7 @@ h1 {
 
 .header .date {
     padding-top: 30px;
+    text-align: right;
 }
 
 h1 sup {
@@ -74,6 +76,10 @@ h1 sup {
     text-transform: uppercase;
     font-size: 0.7em;
     letter-spacing: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
 }
 
 .days,
@@ -86,6 +92,7 @@ h1 sup {
     border-radius: 5px;
     border: 1px solid rgba(72, 94, 144, 0);
     cursor: pointer;
+    margin: 5px;
 }
 
 .days {
