Add border radius to square-bubbles

--- a/css/style-white.css
+++ b/css/style-white.css
@@ -150,6 +150,7 @@ footer a {
     display: block;
     width: 40px;
     height: 40px;
+    border-radius: 5%;
     background-color: rgba(34, 122, 255, 0.15);
     bottom: -160px;
     -webkit-animation: square 30s infinite;
